# 2526-student-practices-10th-grade-mark_dimitrov-kristiyan_parashkevov

./: .gitignore
Cinemark/: Cinemark.sln  types.h
cinemark/: CMakeLists.txt
cinemark/business_logic/: CMakeLists.txt  testtablemodel.h  ticket_controller.cpp  ticket_controller.h  types.h  user_controller.cpp  user_controller.h
cinemark/data_access/: CMakeLists.txt  database.cpp  database.h  db_connection_parameters.h  film.h  film_paginator.cpp  film_paginator.h  film_table_model.cpp  film_table_model.h  ticket.h  ticket_query.cpp  ticket_query.h  user.h  user_query.cpp  user_query.h
cinemark/logic/: CMakeLists.txt  DataAccess.vcxproj  DataAccess.vcxproj.filters
cinemark/presentation/: CMakeLists.txt  database_connection_dialog.cpp  database_connection_dialog.h  film_editor.cpp  film_editor.h  film_table_view.cpp  film_table_view.h  films_screen.cpp  filmsscreen.cpp  filmsscreen.h  image_path_delegate.cpp  image_path_delegate.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  separator_delegate.cpp  separator_delegate.h
cinemark/presentation/customer/: film_widget.cpp  film_widget.h  films_page.cpp  films_page.h  main_window.cpp  seat_dialog.cpp  seat_dialog.h  seat_widget.cpp  seat_widget.h
